[package]
name = "nzconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
png = "0.17.10"

[profile.release]
strip = true
panic = "abort"
